--- a/public/homeUIElo/assets/css/theme.css
+++ b/public/homeUIElo/assets/css/theme.css
@@ -8258,6 +8258,11 @@ fieldset:disabled .btn {
   margin-bottom: 0 !important;
 }
 
+.mb-00 {
+  margin-bottom: 0 !important;
+  font-size: 10px;
+}
+
 .mb-1 {
   margin-bottom: 0.25rem !important;
 }
